# rs2-stackbot

./: .gitignore  README.md
SS1_Perception/perception_pkg/: charuco_handeye_calibration.py  charuco_handeye_validate.py  cube_detector.py  pose_estimator_v2.py  publish_handeye_tf.py  webcam_hsv_tuner.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/interaction_execution/share/ament_index/resource_index/package_run_dependencies/: interaction_execution
install/interaction_execution/share/interaction_execution/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/interaction_execution/share/interaction_execution/cmake/: interaction_executionConfig.cmake
install/interaction_execution/share/interaction_execution/launch/: task_manager.launch.py
log/: latest_build
src/SS1_Perception/: README  README.md  setup.py
src/SS1_Perception/perception_pkg/: hsv_tuner.py  pose_estimator.py  webcam_detector.py
src/interaction_execution/: README.md
src/interaction_execution/interaction_execution/: CMakeLists.txt  README.md  package.xml
src/interaction_execution/interaction_execution/launch/: ss3_task_coordinator.launch.py
src/interaction_execution/interaction_execution/src/: ss3_task_coordinator.cpp  task_manager.cpp
src/mtc_ss2/: CMakeLists.txt  README.md  package.xml
src/mtc_ss2/include/mtc_ss2/: pyramid_config.hpp
src/mtc_ss2/launch/: mtc_ss2.launch.py  retrieval_ss2.launch.py
src/mtc_ss2/src/: mtc_ss2.cpp  retrieval_ss2.cpp
src/perception_pkg/: README.md  package.xml  setup.py
src/perception_pkg/calibration/: handeye_charuco_andreff.json  handeye_charuco_daniilidis.json  handeye_charuco_horaud.json  handeye_charuco_park.json  handeye_charuco_tsai.json
src/perception_pkg/perception_pkg/: camera_viewer.py~  pose_estimator.py
src/ur_onrobot/ur_onrobot_description/urdf/: ur_onrobot_macro.xacro
src/ur_onrobot/ur_onrobot_moveit_config/config/: controllers.yaml  ompl_planning.yaml
src/ur_onrobot/ur_onrobot_moveit_config/rviz/: view_robot.rviz
src/ur_onrobot/ur_onrobot_moveit_config/srdf/: ur_onrobot_macro.srdf.xacro
ss1_perception/: pose_estimator.py
(+1 files in other folders)
